--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.5"
+      "cors": "^2.8.5",
+      "dotenv": "^17.2.1",
+      "express": "^5.1.0",
+      "nodemailer": "^7.0.5",
+      "serverless-http": "^3.2.0"
   }
 }
